# nix-index

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  command-not-found.nu  command-not-found.sh  default.nix  flake.nix  package.nix  recover.py  rustfmt.toml  shell.nix
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
etc/: command-not-found.bash  command-not-found.fish  command-not-found.zsh
examples/: nix-index-debug.rs
src/: database.rs  errors.rs  files.rs  frcode.rs  hydra.rs  lib.rs  listings.rs  main.rs  nixpkgs.rs  package.rs  util.rs  workset.rs
