[package]
description = "Nix (package manager) indexing primitives"
authors = ["Benno Fünfstück <benno.fuenfstueck@gmail.com>"]
edition = "2021"
name = "nix-index"
version = "0.1.9"
license = "BSD-3-Clause"
homepage = "https://github.com/nix-community/nix-index"
repository = "https://github.com/nix-community/nix-index"
readme = "README.md"
keywords = [ "nixpkgs", "nixos", "nix", "indexing" ]
include = [
  "examples/",
  "src/*.rs",
  "src/bin/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE"
]

[[bin]]
doc = false
name = "nix-index"

[[bin]]
name = "nix-locate"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
error-chain = "0.12.4"
futures = "0.3.30"
grep = "0.3.1"
atty = "0.2.14"
memchr = "2.7.2"
num_cpus = "1.16.0"
indexmap = "2.2.6"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
rayon = "1.10.0"
regex = "1.10.4"
regex-syntax = "0.7.4"
reqwest = { version = "0.12.3", features = [ "brotli" ] }
separator = "0.4.1"
serde = { version = "1.0.198", features = [ "derive" ] }
serde_bytes = "0.11.14"
serde_json = "1.0.116"
tokio-retry = "0.3.0"
xdg = "2.5.2"
xml-rs = "0.8.20"
xz2 = "0.1.7"
zstd = { version = "0.12.4", features = [ "zstdmt" ] }

[dependencies.hyper]
features = ["client", "http1", "http2", "runtime", "stream"]
version = "0.14.27"


[dependencies.tokio]
features = ["full"]
version = "1.32.0"

[dependencies.clap]
version = "4.3.24"
features = ["derive", "env"]

[dependencies.rusqlite]
features = ["backup"]
version = "0.31.0"

[[example]]
name = "nix-index-debug"

[profile]
[profile.release]
debug = true
